# ncnn_Android_CrowdCounting

./: .project  README.md
app/: .project  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: p2pnet.param
app/src/main/java/com/tencent/p2pnetncnn/: MainActivity.java  P2PNetNcnn.java
app/src/main/jni/: CMakeLists.txt  p2pnet_ncnn.cpp
app/src/main/res/values/: strings.xml
